--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-/* Основные стили для всего тела */
 body {
     display: flex;
     flex-direction: column;
@@ -12,9 +11,9 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+    overflow: hidden; /* Блокировка прокрутки страницы */
 }
 
-/* Стили для основного контейнера */
 .container {
     text-align: center;
     width: 100%;
@@ -25,7 +24,6 @@ body {
     height: 100%;
 }
 
-/* Стили для страниц */
 .page {
     display: none;
     width: 100%;
@@ -37,10 +35,11 @@ body {
     box-shadow: 0 0 20px #000;
 }
 
-/* Стили для активной страницы */
 .page.active {
     display: block;
 }
+
+
 
 /* Стили для заголовка */
 .header {
