--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    overflow: hidden; /* Блокировка прокрутки страницы */
+    overflow-x: hidden; /* Блокировка горизонтальной прокрутки страницы */
 }
 
 .container {
@@ -38,8 +38,6 @@ body {
 .page.active {
     display: block;
 }
-
-
 
 /* Стили для заголовка */
 .header {
@@ -81,7 +79,7 @@ body {
     align-items: center;
     width: 60px;
     height: 60px;
-    margin-left: 500px;
+    margin-left: 120px;
 }
 
 /* Стили для контейнера кнопок */
@@ -113,30 +111,182 @@ body {
 /* Стили для прозрачного текста */
 .transparent-text {
     position: absolute;
-    top: 50%;
+    top: 7px;
     left: 50%;
-    transform: translate(-50%, -50%);
-    color: rgba(255, 255, 255, 0.5);
+    transform: translateX(-50%);
+    color: yellow;
     font-size: 1em;
-    pointer-events: none;
+    text-shadow: 0 0 25px yellow;
 }
 
-/* Стили для активной кнопки */
-.button:active {
-    transform: scale(0.97);
+/* Стили для страницы стейкинга */
+.staking-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-/* Стили для кнопок при наведении */
-.button:hover.staking {
-    box-shadow: 0 0 65px blue;
+.staking-container input,
+.staking-container button {
+    padding: 10px;
+    margin: 10px 0;
+    font-size: 1.2em;
 }
 
-.button:hover.clicker {
-    box-shadow: 0 0 80px green;
+.staking-container p {
+    font-size: 1.1em;
+    color: yellow;
 }
 
-.button:hover.pass {
-    box-shadow: 0 0 40px yellow;
+/* Стили для страницы заданий */
+.task-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.task-title {
+    font-size: 2em;
+    font-weight: bold;
+    color: yellow;
+    text-shadow: 0 0 5px yellow;
+}
+
+.task-icon {
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+}
+
+#tasksList {
+    list-style-type: none;
+    padding: 0;
+}
+
+.task-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #444;
+    border-radius: 5px;
+    font-weight: 700;
+}
+
+.task-text {
+    flex: 1;
+    color: yellow;
+    text-align: left;
+    font-weight: bold;
+}
+
+.taskButton {
+    padding: 10px 20px;
+    margin-left: 10px;
+    font-size: 1em;
+    font-weight: bold;
+    background-color: yellow;
+    color: #444;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* Стили для страницы рефералов */
+.referral-rewards,
+.referral-income {
+    margin: 20px 0;
+}
+
+.referral-rewards p,
+.referral-income p {
+    font-size: 1.2em;
+    color: yellow;
+}
+
+/* Стили для страницы кошелька */
+.wallet-balance,
+.promo-code {
+    margin: 20px 0;
+}
+
+.wallet-balance h3,
+.promo-code h3 {
+    font-size: 1.5em;
+    color: yellow;
+    text-shadow: 0 0 5px yellow;
+}
+
+.wallet-balance p,
+.promo-code input,
+.promo-code button {
+    font-size: 1.2em;
+    color: yellow;
+    background-color: #444;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+}
+
+.promo-code button {
+    background-color: yellow;
+    color: #444;
+    cursor: pointer;
+}
+
+/* Стили для модального окна */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.modal-content {
+    background-color: #444;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.modal-content h2 {
+    font-size: 2em;
+    color: yellow;
+    margin-bottom: 20px;
+}
+
+.modal-content p {
+    font-size: 1.2em;
+    color: yellow;
+    margin-bottom: 20px;
+}
+
+.modal-content button {
+    padding: 10px 20px;
+    font-size: 1.2em;
+    font-weight: bold;
+    background-color: yellow;
+    color: #444;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1.5em;
+    color: yellow;
+    cursor: pointer;
 }
 
 /* Стили для футера */
@@ -163,211 +313,9 @@ body {
     padding: 5px;
     margin: 0 5px;
     transition: box-shadow 0.3s;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .footer img:hover {
     box-shadow: 0 0 20px #9F8E29;
-}
-
-/* Стили для заголовков */
-h2 {
-    color: #fff;
-    text-shadow: 0 0 10px yellow;
-    font-size: 2.5em;
-}
-
-/* Дополнительные стили для страниц */
-.page h3 {
-    color: #fff;
-    text-shadow: 0 0 5px yellow;
-}
-
-/* Стили для ввода и кнопок */
-input, button {
-    width: 80%;
-    max-width: 300px;
-    padding: 10px;
-    margin: 10px 0;
-    border: none;
-    border-radius: 5px;
-    font-size: 1em;
-}
-
-/* Стили для кнопок */
-button {
-    background-color: yellow;
-    color: #000;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.5s;
-}
-
-button:hover {
-    background-color: gold;
-}
-
-/* Стили для модального окна */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
-.modal-content {
-    background-color: #666;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 70%;
-    border-radius: 10px;
-    text-align: center;
-    color: #fff;
-    font-size: 1.2em;
-    box-shadow: 0 0 20px yellow;
-}
-
-/* Стили для кнопки закрытия модального окна */
-.close {
-    color: #ff0000;
-    float: right;
-    font-size: 32px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: color 0.5s;
-}
-
-.close:hover,
-.close:focus {
-    color: #fff;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-/* Стили для страницы стейкинга */
-#stakingPage {
-    background-color: #222;
-    border-radius: 15px;
-    padding: 30px;
-}
-
-#stakingPage h2 {
-    color: #ffcc00;
-}
-
-/* Медиа-запрос для мобильных устройств */
-@media (max-width: 600px) {
-    .footer img {
-        width: 40px;
-        height: 40px;
-    }
-}
-
-/* Стили для страницы заданий */
-#tasksPage {
-    background-color: #2F2F2F;
-    color: #000;
-    padding: 20px;
-}
-
-.task-header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: yellow;
-    padding: 10px;
-    margin: 10px auto;
-    width: fit-content;
-    border-radius: 8px;
-}
-
-.task-title {
-    color: black;
-    margin: 0;
-    padding-right: 10px;
-    font-size: 1.5em;
-}
-
-.task-icon {
-    width: 30px;
-    height: 30px;
-}
-
-#tasksList {
-    padding: 0;
-    margin: 0 auto;
-    list-style: none;
-    width: calc(100% - 40px);
-}
-
-.task-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    margin: 10px 0;
-    background-color: #ffcc00;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-.task-item.completed {
-    background-color: #999;
-    color: #555;
-    text-decoration: line-through;
-}
-
-.task-item span {
-    font-size: 1.2em;
-}
-
-.task-item img {
-    width: 30px;
-    height: 30px;
-}
-
-/* Стили для чекбоксов */
-.task-item input[type="checkbox"] {
-    width: 20px;
-    height: 20px;
-    margin-left: 10px;
-    cursor: pointer;
-}
-
-/* Стили для кнопки завершения всех задач */
-.complete-all {
-    background-color: yellow;
-    color: black;
-    border: none;
-    padding: 10px 20px;
-    font-size: 1em;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.5s;
-    margin-top: 20px;
-}
-
-.complete-all:hover {
-    background-color: gold;
-}
-
-/* Стили для уведомлений */
-.notification {
-    display: none;
-    position: fixed;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: yellow;
-    color: black;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    z-index: 1000;
 }
