--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ body {
     align-items: center;
     width: 60px;
     height: 60px;
-    margin-left: 100px;
+    margin-left: 120px;
 }
 
 /* Стили для контейнера кнопок */
@@ -94,7 +94,7 @@ body {
 /* Стили для обертки кнопок */
 .button-wrapper {
     position: relative;
-    width: 105%;
+    width: 102%;
     height: calc(33.33% - 2px);
     margin-bottom: -4px;
 }
@@ -139,26 +139,34 @@ body {
 }
 
 /* Стили для страницы заданий */
+#tasksPage {
+    background-color: #2F2F2F;
+    color: #000;
+    padding: 20px;
+}
+
 .task-header {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
+    background-color: yellow;
+    padding: 10px;
+    margin: 10px auto;
+    width: fit-content;
+    border-radius: 8px;
 }
 
 .task-title {
-    font-size: 2em;
-    font-weight: bold;
-    color: yellow;
-    text-shadow: 0 0 5px yellow;
+    color: black;
+    margin: 0;
+    padding-right: 10px;
+    font-size: 1em;
 }
 
 .task-icon {
-    width: 30px;
-    height: 30px;
-    margin-left: 10px;
+    width: 35px;
+    height: 35px;
 }
-
 #tasksList {
     list-style-type: none;
     padding: 0;
@@ -170,14 +178,14 @@ body {
     align-items: center;
     padding: 10px;
     margin-bottom: 10px;
-    background-color: #444;
+    background-color: #ffcc00;
     border-radius: 5px;
     font-weight: 700;
 }
 
 .task-text {
     flex: 1;
-    color: yellow;
+    color: #444;
     text-align: left;
     font-weight: bold;
 }
