--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ body {
 .task-title {
     font-size: 2em;
     font-weight: bold;
-    color: yellow;
+    color: black;
     text-shadow: 0 0 5px yellow;
 }
 
